sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:9: error: not found: value l3
  while (l1!=0 || l3!=0){
                  ^