sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var n=getNombreValeurs()
  var debut=0
  var fin=n-2
  var l1=1
  var l2=1
  
  while (l1!=0 || l3!=0){
    l1=0
    l2=0
    for (i <- debut to fin){
      if (plusPetit(i+1,i)){
        echange(i,i+1)
        l1+=1
      }
    }
    fin-=1
    for (i <- fin to debut by -1){
      if (plusPetit(i+1,i)){
        echange(i,i+1)
        l2+=1
      }
    }
    debut+=1
  }
}